<resources>
    <string name="app_name">Zira</string>
    <string name="next">Next</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here</string>
    <string name="create">Create</string>
    <string name="account">Account</string>
    <string name="add_your_photo">Add your\nphoto</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile">MOBILE</string>
    <string name="password">PASSWORD</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="preferences">Preferences</string>
    <string name="now_you_will_setup_when_you_are_available_as_well_as_when_you_prefer_to_work">Now you will setup, when you are available, as well as when you prefer to work.</string>
    <string name="your_manager_may_have_already_put_in_some_of_your_time_preferences_you_can_still_change_and_tweak_them_as_you_like">Your manager may have already put in some of your time preferences. You can still change and tweak them as you like.</string>
    <string name="my">My</string>
    <string name="skip_for_now">Cancel</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="click_the_link_in_your_invite_message_nor_create_a_new_account_belw">Click the link in your invite message. Or create a new account belw.</string>
    <string name="already_have_an_account">Already have an account?&#160;</string>
    <string name="log_in">Login</string>
    <string name="welcome">Welcome&#160;</string>
    <string name="login">Login</string>
    <string name="click_here">&#160;Click Here</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="code">CODE</string>
    <string name="resend_code">Resend Code</string>
    <string name="set_preferences">Set Preferences</string>
    <string name="done">Done</string>
    <string name="time">Time</string>


    <string name="below_are_your_badges_collected_over_your_tenure">Below are your badges collected over your tenure</string>
    <string name="top_performer">Top Performer</string>
    <string name="personal_info">Personal Info</string>
    <string name="dob">DOB:</string>
    <string name="phone">Phone:</string>
    <string name="address">Address:</string>
    <string name="edit_personal_info">Edit Personal Info</string>
    <string name="payment_details">Payment Details</string>
    <string name="bank_of_america_debit">Bank of America Debit</string>
    <string name="delete">Delete</string>
    <string name="edit_payment_settings">Edit Payment Settings</string>
    <string name="time_off">Time off</string>
    <string name="approved">Approved:</string>
    <string name="cancel">Cancel</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="request_new">Request New</string>
    <string name="good_show_up_rate_keep_it_up">Good show up rate. Keep it up!</string>
    <string name="badges">Badges</string>
    <string name="show_all_badges">Show all badges</string>


    <string name="you_have_no_upcoming_shifts">You have no upcoming shifts</string>
    <string name="make_sure_you_have_your_time_preferences_set_up_so_you_are_eligible_for_shifts">Make sure you have your time preferences set up so you are eligible for shifts.</string>
    <string name="set_up_your_preferences">Set up your preferences</string>
    <string name="oops">Oops!</string>
    <string name="the_phone_number_and_the_password_combination_does_not_match_please_try_again">The phone number and the password combination does not match. Please try again.</string>
    <string name="ok">Ok</string>
    <string name="not_a_member">Not a member?</string>
    <string name="sign_up">&#160;Sign up</string>
    <string name="cash_out_your_earnings_any_time_you_want_using_instant_pay">Cash out your earnings any time you want using instant pay</string>
    <string name="link_your_bank_account_and_enable_instant_cash_out_your_earnings_will_be_available_for_use_the_same_day">Link your bank account and enable instant cash out. Your earnings will be available for use the same day</string>
    <string name="set_up_instant_pay">Set up Instant Pay</string>
    <string name="next_shift">Next Shift</string>
    <string name="upcoming_shifts">Upcoming Shifts</string>
    <string name="view_calendar">View Calendar</string>
    <string name="my_pay">My Pay</string>
    <string name="dollar">$&#160;</string>
    <string name="we_will_automatically_transfer_the_final_amount_at_the_end_of_the_week">We will automatically transfer the final amount at the end of the week.</string>
    <string name="view_earnings">View Earnings</string>
    <string name="broadcast">Broadcasts</string>
    <string name="receive_messages_from_your_store_manager">Receive messages from your store manager</string>
    <string name="make_sure_you_have_your_pay_details_set_up_so_that_we_can_show_you_all_your_earnings">Make sure you have your pay details set up so that we can show you all your earnings</string>
    <string name="view_video">View Video</string>
    <string name="time_preferences">Time Preferences</string>
    <string name="manage">Manage</string>
    <string name="make_sure_you_have_your_time_preferences_set_up_so_you_are_eligible_for_shirts">Make sure you have your time preferences set up so you are eligible for shirts</string>
    <string name="time_off_period">Time off period</string>
    <string name="select">Select</string>
    <string name="select_date">Select Date</string>
    <string name="request">Request</string>
    <string name="cancel_time_off">Cancel Time Off</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_you_want_to_cancel_your_time_off">Are you sure you want to cancel your time off?</string>
    <string name="go_back">Go Back</string>
    <string name="set">Set</string>
    <string name="start_date_caps">START DATE</string>
    <string name="end_date_caps">END DATE</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="routing_number">Routing Number</string>
    <string name="save">Save</string>
    <string name="delete_payment_profile">Delete Payment Profile</string>
    <string name="are_you_sure_you_of_want_to_delete_the_payment_profile">Are you sure you of want to delete the payment profile?</string>
    <string name="calendar">Calendar</string>
    <string name="you_have_no_shift_for_this_week">You have no shift for this week</string>
    <string name="recommended_shifts">Recommended Shifts</string>
    <string name="scheduled_shifts">Scheduled Shifts</string>

    <string name="sun">S</string>
    <string name="mon">M</string>
    <string name="tue">T</string>
    <string name="wed">W</string>
    <string name="thu">T</string>
    <string name="fri">F</string>
    <string name="sat">S</string>

    <string name="release_shift">Release Shift</string>
    <string name="call_manager">Call Manager</string>
    <string name="close">close</string>
    <string name="my_shift">My Shift</string>
    <string name="role">Role</string>
    <string name="cashier">Cashier</string>
    <string name="expected_earnings">Expected Earnings</string>
    <string name="location">Location</string>
    <string name="undo_release">Undo Release</string>
    <string name="completed">Completed</string>
    <string name="rate_this_shift">Rate this shift</string>
    <string name="open_shift">Open Shift</string>
    <string name="unclaimed">Unclaimed</string>
    <string name="claim_shift">Claim Shift</string>
    <string name="previous_paystubs">Previous Paystubs</string>
    <string name="current_wallet">Current Wallet</string>
    <string name="your_earnings_since_your_last_withdrawal">Your earnings since your last withdrawal.</string>
    <string name="transfer_to_bank">Transfer to bank</string>
    <string name="we_ll_navigate_you_to_successful_earnings">We’ll navigate you to successful earnings</string>
    <string name="once_you_have_completed_a_shift_you_will_be_able_to_track_your_earnings_and_paystubs_here">Once you have completed a shift, you will be able to track your earnings and paystubs here.</string>
    <string name="connect_your_bank_account_to_set_up_direct_deposit">Connect your bank account to set up direct deposit</string>
    <string name="set_up_pay">Set up Pay</string>
    <string name="enter_pin_to_start_shift">Enter PIN to start shift</string>
    <string name="the_money_s_gone_missing_just_kidding">The money’s gone missing! Just kidding :)</string>
    <string name="close_checkin">Close Checkin</string>
    <string name="paystub">Paystub</string>
    <string name="total_wages">Total Wages</string>
    <string name="tips">Tips</string>
    <string name="total">Total</string>
    <string name="transfer_details">Transfer Details</string>
    <string name="all_transfers_are_256_bit_encrypted">All transfers are 256-bit encrypted</string>
    <string name="included_shifts">Included Shifts</string>
    <string name="take_control_of_your_schedule">Take control of your schedule</string>
    <string name="move_and_scale">Move and Scale</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="available">Available</string>
    <string name="preffered">Preffered</string>
    <string name="yes_caps">YES</string>
    <string name="validate_emptyField">You cannot leave field empty</string>
    <string name="bank">Bank</string>
    <string name="verify_number">Verify number</string>
    <string name="back">Back</string>
    <string name="atleast_8_characters">Atleast 8 characters</string>
    <string name="personal">Personal</string>
    <string name="info">Info</string>
    <string name="street_address">Street Address</string>
    <string name="apt_optional">APT # (Optional)</string>

    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="payroll">Payroll</string>
    <string name="ssn">SSN</string>
    <string name="reset">Reset</string>
    <string name="resetPassword">Reset Password</string>
    <string name="small_password">Password</string>
    <string name="new_password">New Password</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="release">Release</string>
    <string name="check_in">CHECK IN</string>
    <string name="release_shift_caps">RELEASE SHIFT</string>
    <string name="personal_message">Personal Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_validation">Password must be atleast 8 characters</string>
    <string name="show_up_rate">Show up rate</string>
    <string name="logout">Logout</string>
    <string name="your_requested_and_approved_time_off_requests_will_show_up_here">Your requested and approved time off requests will show up here.</string>
    <string name="account_nickname">Account Nickname</string>
    <string name="starts_in">Starts in:&#160;</string>
    <string name="end_time">End Time</string>
    <string name="check_out">Check Out</string>
    <string name="caps_check_in">Check In</string>
    <string name="clocked_in">Clocked In:</string>
    <string name="txt_break">Break</string>
    <string name="take_break">Take A Break</string>
    <string name="view_shift">View Shift</string>
    <string name="edit">Edit</string>
    <string name="profile_details">Profile Details</string>
    <string name="_0">$0</string>
    <string name="completed_shift">Completed Shifts</string>


    <string name="country">Country</string>

</resources>
