<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/default_margin"
        android:paddingTop="@dimen/default_margin_extra_large">

        <TextView
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha=".22"
            android:gravity="center"
            android:text="@string/sun"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha=".22"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha=".22"
            android:gravity="center"
            android:text="@string/tue"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha=".22"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/thu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha=".22"
            android:gravity="center"
            android:text="@string/thu"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha=".22"
            android:gravity="center"
            android:text="@string/fri"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha=".22"
            android:gravity="center"
            android:text="@string/sat"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingBottom="@dimen/default_margin"
        android:paddingLeft="@dimen/default_margin_extra_large"
        android:paddingTop="@dimen/default_margin"
        android:text="January"
        android:textColor="@color/black"
        android:textSize="@dimen/text_19"
        android:visibility="gone" />

    <!--    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">-->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="visible" />

    <!--
        </android.support.v4.widget.NestedScrollView>-->

</LinearLayout>
