<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/default_margin_large">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/cancel_time_off"
            android:textColor="@color/black"
            android:textSize="@dimen/text_24" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/default_margin_extra_large"
            android:text="@string/are_you_sure_you_of_want_to_delete_the_payment_profile"
            android:textSize="@dimen/normal_text_plus" />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin_50"
            android:layout_marginRight="@dimen/default_margin_50"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@drawable/blue_button"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal_text_minus" />

        <TextView
            android:id="@+id/tvGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_margin_large"
            android:text="@string/go_back"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_minus" />

    </LinearLayout>

</RelativeLayout>