<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:layout_marginLeft="@dimen/default_margin_40"
        android:layout_marginRight="@dimen/default_margin_40"
        android:layout_marginTop="@dimen/default_margin_25"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_25"
            android:alpha=".5"
            android:text="@string/create"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_19" />

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvWelcome"
            android:layout_marginTop="@dimen/default_margin_neg"
            android:text="@string/account"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_32" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAllCaps="true"
            android:text="@string/password"
            android:textSize="@dimen/normal_text" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPassword"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:background="@null"
            android:letterSpacing="0.2"
            android:imeOptions="actionDone"
            android:hint="@string/atleast_8_characters"
            android:textColorHint="@color/light_grey"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/blue"
            android:textSize="@dimen/normal_text" />

        <View
            android:id="@+id/viewMobile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_margin_2"
            android:layout_below="@+id/etPassword"
            android:layout_marginTop="@dimen/default_margin_half"
            android:background="@color/blue" />

        <TextView
            android:id="@+id/tvErrorDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewMobile"
            android:textColor="@color/red"
            android:layout_marginTop="@dimen/default_margin"
            android:textSize="@dimen/text_11" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_marginLeft="@dimen/default_margin_40"
        android:layout_marginRight="@dimen/default_margin_40">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button"
            android:text="@string/next"
            android:textAllCaps="false"
            android:elevation="@dimen/default_margin"
            android:padding="@dimen/default_margin_large"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal_text_minus" />

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/default_margin_large"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/normal_text_minus" />

    </LinearLayout>
</LinearLayout>